--- a/src-tauri/gen/android/app/src/main/res/values/strings.xml
+++ b/src-tauri/gen/android/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Bill Insight</string>
-    <string name="main_activity_title">bill-insight</string>
+    <string name="main_activity_title">Bill Insight</string>
 </resources>
